@@ -1,3 +1,7 @@
+2006-11-17  Francois Dumont  <dums@stlport...>
+
+	* stlport/stl/config/_macosx.h: Add endianess configuration.
+
 2006-11-16  Francois Dumont  <dums@stlport...>
 
 	* test/unit/resolve_name.cpp: Clean most of MSVC6 workaround, only
